# dcc012-lab-sorting

./: CMakeLists.txt  README.md  REPORT.md  config.h.in
app/: classifica.cc  performance.cc
include/: config.h  estudante.h  perf.h  siga.h  sort.h  tools.h
src/: estudante.cc  perf.cc  siga.cc  tools.cc
tests/: CMakeLists.txt  test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc
tests/data/: estudantes.csv
